<!--
  ~ “The contents of this file are subject to the SpotLink Public License,
  ~ version 1.0 (the “License”); you may not use this file except in
  ~ compliance with the License.  You may obtain a copy of the License at
  ~ http://www.thistech.com/spotlink/spl.
  ~
  ~ Software distributed under the License is distributed on an “AS IS”
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.  See
  ~ the License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ The Original Code is SpotLink Server Code, release date February 14, 2011
  ~ The Initial Developer of the Original Code is This Technology, LLC.
  ~ Copyright (C) 2010-2011, This Technology, LLC
  ~ All Rights Reserved.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.thistech</groupId>
    <artifactId>spotlink-oss</artifactId>
    <packaging>jar</packaging>
    <version>1.1.1</version>
    <name>spotlink-oss</name>

    <organization>
        <name>This Tech</name>
        <url>http://www.thistech.com</url>
    </organization>

    <developers>
        <developer>
            <id>jeffbailey</id>
            <name>Jeff Bailey</name>
            <email>jeffb@thistech.com</email>
        </developer>
        <developer>
            <id>nick</id>
            <name>Nick Heudecker</name>
            <email>nick@thistech.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/thistech/SpotLink.git</connection>
        <developerConnection>scm:git:git@github.com:thistech/SpotLink.git</developerConnection>
        <url>https://github.com/thistech/SpotLink</url>
    </scm>

    <repositories>
        <repository>
            <id>thistech-oss</id>
            <url>http://taylor.ord.thistech.com/nexus/content/repositories/thistech-oss/</url>
        </repository>
        <repository>
            <id>maven2-repository.dev.java.net</id>
            <name>Java.net Repository for Maven</name>
            <url>http://download.java.net/maven/2/</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>thistech-oss</id>
            <url>http://taylor.ord.thistech.com/nexus/content/repositories/thistech-oss/</url>
        </repository>
    </distributionManagement>

    <properties>
        <cxf.version>2.3.2</cxf.version>
        <ehcache.version>2.3.0</ehcache.version>
        <schemasupport.version>1.13</schemasupport.version>
        <spring.version>3.0.5.RELEASE</spring.version>
    </properties>

    <build>
        <finalName>spotlink-oss</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <inherited>true</inherited>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Xmx512m -Xms128m -XX:MaxPermSize=256m</argLine>
                    <forkMode>none</forkMode>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <tagBase>https://svn.apache.org/repos/asf/maven/components/releases</tagBase>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- commons -->
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.1</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.3</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.4</version>
        </dependency>
        <!-- cxf -->
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-bindings-soap</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxws</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-transports-http</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <!-- ehcache -->
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache-core</artifactId>
            <version>${ehcache.version}</version>
        </dependency>
        <!-- logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.6.1</version>
        </dependency>
        <!-- schemasupport -->
        <dependency>
            <groupId>com.thistech</groupId>
            <artifactId>schemasupport-scte130</artifactId>
            <version>${schemasupport.version}</version>
        </dependency>
        <dependency>
            <groupId>com.thistech</groupId>
            <artifactId>schemasupport-vast</artifactId>
            <version>${schemasupport.version}</version>
        </dependency>
        <!-- spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <!-- misc -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.6.6</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.0.3</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-jaxrs</artifactId>
            <version>1.4.3</version>
        </dependency>
        <dependency>
            <groupId>javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.8.0.GA</version>
        </dependency>
        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
            <version>1.8.4</version>
        </dependency>
        <!-- test dependencies -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>5.10</version>
            <classifier>jdk15</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.8.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
